--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     
-    <canvas id="c"></canvas>
+    <canvas id="c" style="cursor: url(image/scissors.cur)"></canvas>
     <script type="text/javascript" src="js/game.js"></script>
 </body>
 </html>
