--- a/index.html
+++ b/index.html
@@ -3,16 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Game</title>
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-    </style>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    
-    <canvas id="c" style="cursor: url(image/scissors.cur), pointer"></canvas>
+    <canvas id="c"></canvas>
+	
     <script type="text/javascript" src="js/game.js"></script>
 </body>
 </html>
