Added files via upload

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Game</title>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-</head>
-<body>
-    <canvas id="c"></canvas>
-	
-    <script type="text/javascript" src="js/game.js"></script>
-</body>
+	<head>
+		<meta charset="UTF-8">
+		<title>Game</title>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+	</head>
+	<body>
+		<div class="container">
+			<div class="header">
+				<h1 class="title">Xlines</title>
+				<div class="above-game">
+					<p class="game-intro">Keep three nails so that big circle moved into one of colorful circle</p>
+				</div>
+			</div>
+		<div class="game-container">
+			<canvas id="c"></canvas></div>
+		</div>
+		<script type="text/javascript" src="js/game.js"></script>
+	</body>
 </html>
