Added files via upload
Added game explantion

--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 			</div>
 		<div class="game-container">
 			<canvas id="c"></canvas></div>
+		<p class="game-explantion">
+		<strong class="important">HOW TO PLAY: </strong><strong>left click</strong> or <strong>touch</strong> on small dots to remove it. When you <strong>remove</strong> a point, a big circle will move. When you keep three points a large circle must be in one of <strong>colorful circles</strong>. <strong style="color:#76E42F">Green</strong>, <strong style="color:#FF9E34">orange</strong>, <strong style="color:#EB305F">red</strong> circle will give you respectively <strong style="color:#76E42F">150</strong>, <strong style="color:#FF9E34">100</strong>, <strong style="color:#EB305F">50</strong> score points and <strong style="color:#76E42F">2</strong>, <strong style="color:#FF9E34">1</strong>, <strong style="color:#EB305F">0</strong> lifes.
+		</p>
 		</div>
+		
 		<script type="text/javascript" src="js/game.js"></script>
 	</body>
 </html>
