--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<div class="header">
 				<h1 class="title">Xlines</title>
 				<div class="above-game">
-					<p class="game-intro">Keep three nails so that the big circle moved into one of the colored ring</p>
+					<p class="game-intro">Keep three nails so that the big circle moved into one of the colored rings</p>
 				</div>
 			</div>
 		<div class="game-container">
