Added files via upload

--- a/index.html
+++ b/index.html
@@ -8,18 +8,23 @@
 	<body>
 		<div class="container">
 			<div class="header">
-				<h1 class="title">Xlines</title>
+				<h1 class="title">Xlines</h1>
 				<div class="above-game">
 					<p class="game-intro">"Remove all nails except three to move the big circle into one of the colored rings</p>
 				</div>
 			</div>
-		<div class="game-container">
-			<canvas id="c"></canvas></div>
-		<p class="game-explantion">
-		<strong class="important">HOW TO PLAY: </strong><strong>left click</strong> or <strong>touch</strong> on a small dots to remove it. When you <strong>remove</strong> a dot the big circle will move. When you left three dots the big circle must be in one of <strong>colored rings</strong>. <strong style="color:#76E42F">Green</strong>, <strong style="color:#FF9E34">orange</strong>, <strong style="color:#EB305F">red</strong> circle will give you <strong style="color:#76E42F">150</strong>, <strong style="color:#FF9E34">100</strong>, <strong style="color:#EB305F">50</strong> score points and <strong style="color:#76E42F">1</strong>, <strong style="color:#FF9E34">0.5</strong>, <strong style="color:#EB305F">0</strong> lifes.
-		</p>
-		</div>
+			<div class="game-container">
+				<canvas id="c"></canvas>
+			</div>
 		
+			<div class="explantion-container">
+				
+				<p class="game-explantion">
+						<strong class="important">HOW TO PLAY: </strong><strong>left click</strong> or <strong>touch</strong> on a small dots to remove it. When you <strong>remove</strong> a dot the big circle will move. When you left three dots the big circle must be in one of <strong>colored rings</strong>. <strong style="color:#76E42F">Green</strong>, <strong style="color:#FF9E34">orange</strong>, <strong style="color:#EB305F">red</strong> circle will give you <strong style="color:#76E42F">150</strong>, <strong style="color:#FF9E34">100</strong>, <strong style="color:#EB305F">50</strong> score points and <strong style="color:#76E42F">1</strong>, <strong style="color:#FF9E34">0.5</strong>, <strong style="color:#EB305F">0</strong> lifes.
+				</p>
+				
+			</div>
+		</div>
 		<script type="text/javascript" src="js/game.js"></script>
 	</body>
 </html>
