--- a/index.html
+++ b/index.html
@@ -3,37 +3,32 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Game</title>
-		<script>
-			if (screen.width <= screen.height)
-			{
-				document.write('<link rel="stylesheet" type="text/css" href="css/style.css">')
-			}
-			else{
-				document.write('<link rel="stylesheet" type="text/css" href="css/widescreen.css">')
-			}
-		</script>
-<!--		<link rel="stylesheet" type="text/css" href="css/style.css">-->
+		<link rel="stylesheet" type="text/css" href="css/style.css">
 	</head>
 	<body>
-		<div class="container">
-			<div class="header">
-				<h1 class="title">Xlines</h1>
+		
+		<div class="header">
+			<div class="header-container">
+				<div class="title">Xlines</div>
 				<div class="above-game">
-					<p class="game-intro">"Remove all nails except three to move the big circle into one of the colored rings</p>
+					<p class="game-intro">Remove all nails except three to move the big circle into one of the colored rings</p>
 				</div>
 			</div>
+		</div>
+		<div class="game">
 			<div class="game-container">
 				<canvas id="c"></canvas>
 			</div>
-		
+		</div>
+		<div class="explantion">
 			<div class="explantion-container">
 				
 				<p class="game-explantion">
 						<strong class="important">HOW TO PLAY: </strong><strong>left click</strong> or <strong>touch</strong> on a small dots to remove it. When you <strong>remove</strong> a dot the big circle will move. When you left three dots the big circle must be in one of <strong>colored rings</strong>. <strong style="color:#76E42F">Green</strong>, <strong style="color:#FF9E34">orange</strong>, <strong style="color:#EB305F">red</strong> circle will give you <strong style="color:#76E42F">150</strong>, <strong style="color:#FF9E34">100</strong>, <strong style="color:#EB305F">50</strong> score points and <strong style="color:#76E42F">1</strong>, <strong style="color:#FF9E34">0.5</strong>, <strong style="color:#EB305F">0</strong> lifes.
 				</p>
 				
-			</div>
-		</div>
+			</div>	
+		</div>	
 		<script type="text/javascript" src="js/game.js"></script>
 	</body>
 </html>
